Extended pom, fixed versions and added comments